--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,2 +1,58 @@
 ---
-# tasks file for mysql
+#s1126361
+#Ronan Spaan
+    - name: Install MySQL
+      yum: 
+        name: mysql-server
+        state: present
+        update_cache: yes
+
+    - name: Install lib
+      yum:
+        name: libmysqlclient-dev
+        state: present
+
+    - name: Install python
+      yum:
+        name: python-mysqldb
+        state: latest
+
+    - name: Install pymysql
+      yum:
+        name: python3-mysqldb
+        state: latest        
+
+    - name: create test database
+      mysql_db:
+        name: test
+        state: present
+
+    - name: ceate user
+      community.mysql.mysql_query:
+        login_db: test
+        query: 
+        - CREATE USER IF NOT EXISTS 'myuser3'@'%' IDENTIFIED BY 'mypass3'
+        - GRANT ALL ON *.* TO 'myuser3'@'%'      
+
+    - name: add sample database
+      template:
+        src: /mnt/sdb/database/dump.sql
+        dest: /tmp/dump.sql
+
+    - name: insert sample database
+      mysql_db:
+        name: test
+        state: import
+        target: /tmp/dump.sql
+        login_user: myuser3
+        login_password: mypass3
+
+    - name: move mysql.cnf file
+      template:
+        src: /mnt/sdb/conf/mysqld.cnf
+        dest: /etc/mysql/mysql.conf.d/mysqld.cnf
+
+    - name: restart mysql
+      service:
+        name: mysql
+        state: restarted
